f-spot 0.6.1.4 - Oct 29 2009 - Dedication
-----------------------------------------
- bugfix release for 0.6.x branch
 - keep sorting on startup (bgo #598714) (Lorenzo)
 - fix a NRE on LastRollDialog (bgo #598009) (Jordi Mas)
 - fix the toolbar 2.28-ification (bgo #591421) (Michael Monreal)
 - accept --sync as comandline parameter
 - avoid crashing on AdjustTimeDialog (bgo #591402)
 - allow more than 60 pictures per Facebook albums
 - backported translations

f-spot 0.6.1.3 - Sep 28 2009 - Bare Feet In The Grass
-----------------------------------------------------
- bugfix release for 0.6.x branch
 - call g_type_init () prior to using gconf (bgo #593561)
 - avoid echoing an entry as tip (bgo #595606, bnc #318452)
 - check for existing files on version creation (bgo #596071)
 - set the progress dialog properties atomically (bgo #595228)
 - avoid a crash in the facebook extensions (bgo #595418) (Iain Lane)
 - fix slideshow transitions on gdk csw (>=2.18)
 - prevent a crash on broken exif data (bgo #595503) (Karl Mikaelsson)
 - support for X-GNOME-FullName in .desktop files (bgo #596240)
 - avoid locking on loading tiffs (bgo #592278)
 - better support for parallel build (bgo #593243) (Christian Krause)
 - avoid a crash on some broken color profiles (bgo #596279)
 - don't copy files to memory first at import (libgphoto2 >= 2.4, for usb cameras only) (bgo #596196)
 - backported translations from master

f-spot 0.6.1.2 - Sep 16 2009 - Always Nice To See You
-----------------------------------------------------
- bugfix release for 0.6.x branch
 - fix for bgo#594016, no longer fails to upgrade if you have photos from post 2038 (sic)
 - use interpolation on drawing
 - allows to run on gtk2.14

f-spot 0.6.1.1 - Aug 26 2009 - Tea Time Again
---------------------------------------------
- bugfix release for 0.6.1.0
  - some files were missing from the tarball
  - fix SendEmail for thunderbird3beta

f-spot 0.6.1.0 - Aug 25 2009 - Tea Time