@@ -14,5 +14,5 @@ Type=Application
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=f-spot
 X-GNOME-Bugzilla-Component=General
-X-GNOME-Bugzilla-Version=0.6.1.4
+X-GNOME-Bugzilla-Version=0.6.1.5
 X-GNOME-DocPath=f-spot/f-spot.xml
