@@ -1,6 +1,6 @@
 <Addin namespace = "FSpot" 
        id = "Core" 
-       version = "0.6.0.1"
+       version = "0.6.1.5"
        compatVersion = "0.6"
        isroot="true">
 
